done with bidding game

--- a/codersBay.html
+++ b/codersBay.html
@@ -30,11 +30,13 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-sm-4">
-                            <img class="text-center" src="brainPic.jpeg">
+                            <img class="img-responsive thumbnail center-block" src="brainPic.jpeg">
                         </div>
                         <div class="col-sm-6">
                             <h3>Highest Bidder: <span id="highestBidder"></span></h3>
                             <h3>Current Price: <span id="highestPrice"></span></h3>
+                            <hr>
+                            <h3>There are <span id="watchers"> 0 </span> people trying to bid.</h3>
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
