--- a/timesheet.html
+++ b/timesheet.html
@@ -4,6 +4,15 @@
 <head>
     <title>EmployeeData</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- Jquery ref -->
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+    <!-- Firebase ref -->
+    <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
+    <!-- Moment ref -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+    <!-- JS file ref -->
+    <script src="timesheet.js"></script>
+
     <style>
     .jumbotron {
         background-color: #f0e595;
@@ -25,7 +34,7 @@
                     <div class="panel-heading">
                         <h3 class="panel-title"><strong>Current Employee</strong></h3>
                     </div>
-                    <div class="panel-body" id="empList">
+                    <div class="panel-body">
                         <table class="table table-hover" id="employeeTable">
                             <thead>
                                 <tr>
@@ -38,6 +47,7 @@
                                 </tr>
                             </thead>
                             <tbody>
+
                             </tbody>
                         </table>
                     </div>
@@ -53,15 +63,15 @@
                                 <input type="text" class="form-control" id="employeeNameInput" placeholder="name">
                             </div>
                             <div class="form-group">
-                                <label for="empRole">Role:</label>
+                                <label for="roleInput">Role:</label>
                                 <input type="text" class="form-control" id="roleInput" placeholder="role">
                             </div>
                             <div class="form-group">
-                                <label for="startDate">Start Date: (DD/MM/YY -ex: 01/01/2003) </label>
+                                <label for="startInput">Start Date: (DD/MM/YY -ex: 01/01/03) </label>
                                 <input type="text" class="form-control" id="startInput" placeholder="input start date">
                             </div>
                             <div class="form-group">
-                                <label for="monthlyRate">Monthly Rate:</label>
+                                <label for="rateInput">Monthly Rate:</label>
                                 <input type="text" class="form-control" id="rateInput" placeholder="write monthly rate">
                             </div>
                             <button type="submit" class="btn btn-primary" id="addEmployeeBtn">Submit</button>
@@ -71,14 +81,6 @@
             </div>
         </div>
     </div>
-    <!-- Jquery ref -->
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
-    <!-- Firebase ref -->
-    <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
-    <!-- Moment ref -->
-    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-    <!-- JS file ref -->
-    <script src="timesheet.js" type="text/javascript" charset="utf-8" async defer></script>
-</body>
+    </body>
 
 </html>
