--- a/timesheet.html
+++ b/timesheet.html
@@ -63,19 +63,22 @@
                         <form>
                             <div class="form-group">
                                 <label for="name">Employee Name: </label>
-                                <input type="text" class="form-control" id="employeeNameInput" placeholder="name">
+                                <input type="text" class="form-control" id="employeeNameInput">
                             </div>
+
                             <div class="form-group">
                                 <label for="roleInput">Role:</label>
-                                <input type="text" class="form-control" id="roleInput" placeholder="role">
+                                <input type="text" class="form-control" id="roleInput">
                             </div>
+
                             <div class="form-group">
                                 <label for="startInput">Start Date: (DD/MM/YY -ex: 01/01/03) </label>
                                 <input type="text" class="form-control" id="startInput" placeholder="input start date">
                             </div>
+
                             <div class="form-group">
                                 <label for="rateInput">Monthly Rate:</label>
-                                <input type="text" class="form-control" id="rateInput" placeholder="write monthly rate">
+                                <input type="text" class="form-control" id="rateInput">
                             </div>
                             <button type="submit" class="btn btn-primary" id="addEmployeeBtn">Submit</button>
                         </form>
