--- a/timesheet.html
+++ b/timesheet.html
@@ -10,9 +10,6 @@
     <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
     <!-- Moment ref -->
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-    <!-- JS file ref -->
-    <script src="timesheet.js"></script>
-
     <style>
     .jumbotron {
         background-color: #f0e595;
@@ -22,17 +19,14 @@
 
 <body>
     <div class="container">
-
         <div class="jumbotron">
             <div class="container-flow">
                 <h1> Employee Data Management</h1>
                 <h3>Comprehensive Directory of Employee Billable Hours</h3>
             </div>
         </div>
-
         <div class="row">
             <div class="col-lg-12">
-
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h3 class="panel-title"><strong>Current Employee</strong></h3>
@@ -50,7 +44,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-
+                                <!-- this is where the employee data input is displayed -->
                             </tbody>
                         </table>
                     </div>
@@ -65,17 +59,14 @@
                                 <label for="name">Employee Name: </label>
                                 <input type="text" class="form-control" id="employeeNameInput">
                             </div>
-
                             <div class="form-group">
                                 <label for="roleInput">Role:</label>
                                 <input type="text" class="form-control" id="roleInput">
                             </div>
-
                             <div class="form-group">
                                 <label for="startInput">Start Date: (DD/MM/YY -ex: 01/01/03) </label>
                                 <input type="text" class="form-control" id="startInput" placeholder="input start date">
                             </div>
-
                             <div class="form-group">
                                 <label for="rateInput">Monthly Rate:</label>
                                 <input type="text" class="form-control" id="rateInput">
@@ -87,6 +78,7 @@
             </div>
         </div>
     </div>
-    </body>
+    <script src="timesheet.js"></script>
+</body>
 
 </html>
