--- a/timesheet.html
+++ b/timesheet.html
@@ -4,8 +4,12 @@
 <head>
     <title>EmployeeData</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- Jquery ref -->
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
     <!-- Firebase ref -->
     <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+      -->
     <!-- Moment ref -->
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <style>
@@ -54,7 +58,7 @@
                     <div class="panel-body">
                         <form>
                             <div class="form-group">
-                                <label for="name">Employee Name: </label>
+                                <label for="name">Employee Name</label>
                                 <input type="text" class="form-control" id="employeeNameInput">
                             </div>
                             <div class="form-group">
@@ -76,8 +80,6 @@
             </div>
         </div>
     </div>
-    <!-- Jquery ref -->
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
     <script src="timesheet.js"></script>
 </body>
 
